--- a/src/html/index.html
+++ b/src/html/index.html
@@ -93,6 +93,25 @@
     .au {
         font-size: 150%;
     }
+
+    .loading-bar, .current-speed {
+        position: absolute;
+        z-index: 100;
+    }
+
+    .loading-bar {
+        left: 0;
+        top: 0;
+        background-color: #888;
+        height: 3px;
+    }
+
+    .current-speed {
+        left: 3px;
+        top: 5px;
+        font-size: 13px;
+        color: #333;
+    }
     </style>
     <link rel="stylesheet" href="../css/swal.css" />
     <link rel="stylesheet" href="../css/button.css" />
@@ -103,7 +122,10 @@
     <script>
     window.addEventListener("mousewheel", e => e.preventDefault(), { passive: false });
     </script>
-    <div class="header"></div>
+    <div class="header">
+        <div class="loading-bar" style="display: none;"></div>
+        <div class="current-speed" style="display: none;"></div>
+    </div>
     <div class="main">
         <span style="color: black; position: relative; left: 5px;">请选择PDF语言：</span>
         <div>
