update: lgtm status

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -76,7 +76,7 @@
                             document.execCommand("undo");
                         }
                     } else if (ev.key === "a" && !ev.shiftKey) {
-                        ev.preventDefault()
+                        ev.preventDefault();
                         document.execCommand("selectAll");
                     }
                 }
