--- a/src/html/index.html
+++ b/src/html/index.html
@@ -95,8 +95,8 @@
     </div>
     <div id="log">
         <div class="au beautiful">来自清华附中G17 - PRZ<div class="au beautiful feedback"><a href="#" class="beautifulA">反馈问题</a></div></div>
-        
-        <div class="log"></div>
+
+        <div class="log">OwO</div>
     </div>
     <script src="../js/bars.js"></script>
     <script src="../js/feedback.js"></script>
